--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,16 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "manifest.json",
+                "input": "src",
+                "output": "."
+              },
+              {
+                "glob": "background.js",
+                "input": "src",
+                "output": "."
               }
             ],
             "styles": ["src/styles.scss"]
