--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,15 +3,19 @@
   "name": "Flowload",
   "description": "tbd",
   "version": "1.0",
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["downloads", "storage"],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
   "action": {
     "default_popup": "index.html",
-    "default_icon": "./assets/icons/icon128.png"
+    "default_icon": "favicon.ico"
   },
   "icons": {
-    "16": "./assets/icons/icon16.png",
-    "32": "./assets/icons/icon32.png",
-    "48": "./assets/icons/icon48.png",
-    "128": "./assets/icons/icon128.png"
+    "16": "favicon.ico",
+    "32": "favicon.ico",
+    "48": "favicon.ico",
+    "128": "favicon.ico"
   }
 }
